fix: Fix errors after migration to clean architecture